# enki

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  LICENSE  README.md  enki_cmake_definitions.cmake
docs/: forward-compatibility.md
enki/: base_engine.hpp  bin_probe.hpp  bin_reader.hpp  bin_writer.hpp  enki.hpp  enki_deserialize.hpp  enki_serialize.hpp  json_reader.hpp  json_writer.hpp  manager.hpp  road_to_json.draft
enki/impl/: any_byte_iterator.hpp  concepts.hpp  cstr.hpp  get_member_name.hpp  policies.hpp  result.hpp  serdes_engine.hpp  success.hpp  type_info.hpp  utilities.hpp
enki/legacy/: base_engine.hpp  custom_static_serializable.draft  manager.hpp  more_general_register_pattern.draft
enki/legacy/impl/: any_byte_iterator.hpp  result.hpp  serdes_engine.hpp  utilities.hpp
examples/: CMakeLists.txt  example.cpp
tests/: CMakeLists.txt
tests/benchmarks/: serdes_benchmarks.cpp
tests/include/: array_map.hpp  my_vector.hpp
tests/regression_tests/: arithmetic_serdes.cpp  array_serdes.cpp  base_engine_arithmetic_serdes.cpp  base_engine_array_serdes.cpp  base_engine_composite_tests.cpp  base_engine_custom_type_serdes.cpp  base_engine_enum_serdes.cpp  base_engine_range_constructible_serdes.cpp  base_engine_requirements.cpp  base_engine_tuple_like_serdes.cpp  binary_arithmetic_serdes.cpp  binary_array_serdes.cpp  binary_conversion_serdes.cpp  binary_edge_cases_serdes.cpp  binary_enum_serdes.cpp  binary_error_handling_serdes.cpp  binary_forward_compat_serdes.cpp  binary_map_types_serdes.cpp  binary_variant_serdes.cpp  composite_serdes.cpp  conversion_serdes.cpp  custom_type_dynamic_register.cpp  custom_type_serdes.cpp  enum_serdes.cpp  json_edge_cases_serdes.cpp  json_error_handling_serdes.cpp  json_forward_compat_serdes.cpp  json_serdes.cpp  json_variant_serdes.cpp  manager_composite_tests.cpp  manager_custom_type_register.cpp  manager_requirements.cpp  optional_serdes.cpp  policy_forward_compat_serdes.cpp  range_constructible_serdes.cpp  tuple_like_serdes.cpp  variant_serdes.cpp
tests/src/: main.cpp
tests/stress_tests/: large_data_serdes.cpp
tests/unit_tests/: any_byte_input_iter.cpp  any_byte_output_iter.cpp  bin_writer.cpp  ctad.cpp
